[package]
name = "rustdom"
version = "0.2.9"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.25.1"
kuchiki = "0.8.1"

[dev-dependencies]
cargo-watch = "8.1.1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
