[package]
name = "rustdom"
version = "0.1.0"
authors = ["Daniel Engelke <dengelke91@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "threading_hint"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.20"

[dependencies]
html5ever = "0.21.0"
neon = "0.1.20"
selectors = "0.18.0"
